@startuml

title __PROCESSOR's Class Diagram__\n

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class CharacterSelector {
          - housesModelMap : Map<String, HousesModel>
          - helpProperties : Properties
          + selectPlayerCharacterHouse()
          + selectEnemyCharacterHouse()
          + selectEnemyCharacter()
          + selectCharacter()
          + selectHouse()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class CommandHelper {
          - helptext : Properties
          - patternProperties : Properties
          + listCommands()
          + canUseCommands()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class EntryProcessor {
          - helpProperties : Properties
          + registerPlayer()
          + deregisterPlayer()
          + startNewGame()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class ExitProcessor {
          ~ helpProperties : Properties
          + quitGame()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class FightModuleProcessor {
          - helpProperties : Properties
          + fightEnemy()
          + fightEnemy()
          + handleComms()
          + checkGameStatus()
          + precheckSelectedWeapon()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class GameExplorer {
          - helpProperties : Properties
          + exploreHouse()
          + getInfo()
          + getmyWeapons()
          + playerProfile()
      }
    }
  }
  

  CharacterSelector o-- Session : session
  CharacterSelector o-- ApplicationConfiguration : applicationConfiguration
  EntryProcessor o-- GameValidator : validator
  EntryProcessor o-- ApplicationConfiguration : applicationConfiguration
  EntryProcessor o-- Session : session
  ExitProcessor o-- Session : session
  FightModuleProcessor o-- Session : session
  GameExplorer o-- ApplicationConfiguration : applicationConfiguration
  GameExplorer o-- Session : session


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
